# http-from-scratch

./: .clang-format  .gitignore  CMakeLists.txt  README.md  config.h.in
.github/workflows/: cmake-single-platform.yml
blocking-http-server/: CMakeLists.txt  README.md  blocking_http_server.cpp  blocking_http_server.h  server.cpp
lib/: CMakeLists.txt  README.md  http_client.h  http_core.h  http_request.cpp  http_request.h  http_response.cpp  http_response.h  http_router.cpp  http_router.h  http_server.cpp  http_server.h  http_uri.cpp  http_uri.h  http_uuid.cpp  http_uuid.h
multi-process-http-server/: CMakeLists.txt  README.md  multi_process_http_server.cpp  multi_process_http_server.h  server.cpp
multi-thread-http-server/: CMakeLists.txt  README.md  multi_thread_http_server.cpp  multi_thread_http_server.h  server.cpp
public/pages/: _template.html  about.html  blog.html  index.html  login.html  register.html
public/pages/components/: _navbar.html
